--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Calculater</title>
+    <title>계산기</title>
     <link rel="stylesheet" href="style.css" />
     <script src="script.js"></script>
   </head>
   <body>
     <div class="calc">
-      <input class="display" placeholder="0" />
+      <div class="display-container">
+        <input class="history" readonly />
+        <input class="display" placeholder="0" readonly />
+      </div>
       <div class="buttons">
         <div class="button function">C</div>
         <div class="button function">&#177;</div>
